<resources>
    <string name="app_name">부산여행</string>
    <string name="app_name2">부산여행 Busan Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_food_course">푸디 투어</string>
    <string name="menu_cafe">카페 투어</string>

    <string name="home_second">Home Second</string>

    <string name="empty_description">No description available.</string>
    <string name="view_forecast">View weather forecast</string>
    <string name="know_more_about">Know more about %1$s</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="text_hangout">Hangout</string>
    <string name="text_monuments">Monuments</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_city_trends">City Trends</string>
    <string name="text_city_map">City Map</string>
    <string name="text_login"><u>Already a member? Login</u></string>
    <string name="text_signup_or"><u>Not registered yet? Create new account</u></string>
    <string name="text_go">Go</string>
    <string name="text_locate">Locate</string>
    <string name="text_more">More</string>
    <string name="text_title">Title</string>
    <string name="text_call">Call</string>
    <string name="text_book">Book</string>
    <string name="text_joining_date">Joined on %1$s</string>
    <string name="profile_picture_updated">Profile Picture Updated!</string>
    <string name="text_source">"Source : "</string>
    <string name="no_friends_message">You haven\'t added any trip with friends yet</string>
    <string name="interest_know_more">Know More</string>
    <string name="interest_fun_facts">Fun Facts</string>
    <string name="interest_weather">View Weather Forecast</string>
    <string name="interest_trends">City Trends</string>
    <string name="status_length">22/100</string>
    <string name="name_length">22/50</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="usd_dollar">United States Dollar</string>
    <string name="usd_amount">1</string>
    <string name="inr">Indian Rupee</string>

    <string name="city_visited">You have visited this city!</string>
    <string name="search_title">Cities</string>
    <string name="hotel">HOTEL BOOKING</string>
    <string name="online_Shopping">ONLINE SHOPPING</string>
    <string name="real_time_locator">REAL TIME LOCATOR</string>

    <string name="search_hint">What are you looking for…?</string>

    <string name="you_dont_have_trips">You don\'t have any upcoming trips. Click on + icon on bottom to add new trip!</string>
    <string name="your_past_trips">Your past trips</string>
    <string name="add_me_to_trip">Add me to this trip</string>
    <string name="wrong_date_alert">You should use a future date, if you are planning your next trip!</string>

    <string name="spotlight_home_page">Unfold the city cards to get easy access to information</string>

    <string name="sample_state">Delhi</string>
    <string name="sample_state_trending">#Delhi</string>

    <string name="my_trip">My Trips</string>

    <!-- 홈 아이콘 -->
    <string name="icon_Hospital">병원</string>
    <string name="icon_Parking">공공주차장</string>
    <string name="icon_Bus">버스</string>
    <string name="icon_Disabledperson">장애인 편의시설</string>
    <string name="icon_Food">모범음식점</string>
    <string name="icon_Storytelling">스토리텔링</string>
    <string name="icon_Map">지도</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
